# captive_portal

./: .clinerules  .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/app_local_server/: CMakeLists.txt  app_local_server.c
components/app_local_server/include/: app_local_server.h
components/app_local_server/webpage/: app.css  app.js  index.html  rfid_management.html  rfid_management.js
components/app_time_sync/: CMakeLists.txt  app_time_sync.c
components/app_time_sync/include/: app_time_sync.h
components/app_wifi/: CMakeLists.txt  app_wifi.c
components/app_wifi/include/: app_wifi.h
components/aws_iot/: CMakeLists.txt  aws_iot.c
components/aws_iot/include/: aws_iot.h
components/aws_iot/test/: CMakeLists.txt  aws_iot_test.c
components/dht22_sensor/: CMakeLists.txt  dht22_sensor.c
components/dht22_sensor/include/: dht22_sensor.h
components/dht22_sensor/test/: CMakeLists.txt  dht22_test.c
components/nvs_storage/: CMakeLists.txt  custom_partition.c  nvs_storage.c
components/nvs_storage/include/: custom_partition.h  nvs_storage.h
components/nvs_storage/test/: test_nvs_storage.c
components/rfid_manager/: CMakeLists.txt  rfid_manager.c
components/rfid_manager/include/: rfid_manager.h
components/rfid_manager/test/: CMakeLists.txt  rfid_tests.c
components/rgb_led/: rgb_led.c
components/rgb_led/include/: rgb_led.h
components/rgb_led/test/: CMakeLists.txt  rgb_led_test.c
components/shtc3/: shtc3.c
components/spi_ffs_storage/: CMakeLists.txt  spi_ffs_storage.c
components/spi_ffs_storage/include/: spi_ffs_storage.h
docs/: aws_iot_setup.md
main/: CMakeLists.txt  Kconfig.projbuild  app_station.c  dns_server.c  main.c  time_sync.c
main/include/: app_station.h  dns_server.h  local_server.h  time_sync.h
test/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
test/main/: CMakeLists.txt  Kconfig.projbuild  example_unit_test_test.c  example_unit_test_test.c.c
